# meta_ads_cli

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: homebrew-formula-pr.yml  release-and-publish.yml
docs/: meta-setup-and-configuration.md
examples/: ad-placement-images.yaml  ad.yaml  adset.yaml  campaign.yaml
scripts/: build_artifacts.sh  generate_brew_formula.py  release_brew_formula.sh
src/meta_cli/: __main__.py  app.py  cli_utils.py  config.py  environments.py  exceptions.py  logging_utils.py  output.py  schemas.py  sdk.py
src/meta_cli/commands/: ads.py  adsets.py  auth.py  campaigns.py  creatives.py  environments.py  insights.py  media.py  report.py  targeting.py
tests/: test_ads_cli.py  test_adsets_cli.py  test_auth_cli.py  test_brew_formula_generator.py  test_campaigns_cli.py  test_config.py  test_creatives_cli.py  test_dependency_locks.py  test_environments.py  test_environments_cli.py  test_insights_cli.py  test_media_cli.py  test_package_hygiene.py  test_report_cli.py  test_report_sdk.py  test_schemas.py  test_sdk_campaigns.py  test_sdk_pagination.py  test_sdk_video_processing.py  test_targeting_cli.py
tests/integration/: test_live_meta_cli.py
